added supabase auth

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,3 +9,6 @@ a:hover {color: blue;}
 .center {text-align: center}
 
 .flex {display: flex;}
+
+$primary-color: #20b2aa;
+$secondary-color: #237bcd
