--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,14 +1,58 @@
+//note: custom fonts are loaded in _app.tsx
+
+//import and declare variables
+@use "colors.module.scss" as colors;
+$increment: 16px;
+
+//defaults
 body {
   color: black;
   background-color: white;
+  margin: 0;
+  padding: 0;
 }
 
-a {color: black;}
-a:hover {color: blue;}
+a {color: black; text-decoration: none; font-weight: 600;}
+a:hover {color: colors.$primary-dark;}
 
-.center {text-align: center}
+//classes
+.btn-primary {border-radius: 5px; color: black; background-color: colors.$primary; border: none; padding: 12px 16px; font-weight: 800;}
+.btn-primary:hover {cursor: pointer; background-color: colors.$primary-dark;}
+
+.btn-secondary {border-radius: 5px; color: white; background-color: colors.$secondary; border: none; padding: 12px 16px; font-weight: 800;}
+.btn-secondary:hover {cursor: pointer; background-color: colors.$secondary-dark;}
+
+.primary-color {color: colors.$primary}
+.secondary-color {color: colors.$secondary}
+.secondary-text {color: grey;}
+
+//utilties -- display
+.text-center {text-align: center;}
+.text-left {text-align: left;}
 
 .flex {display: flex;}
+.flex-around {display: flex; justify-content: space-around;}
+.flex-between {display: flex; justify-content: space-between;}
+.flex-center {display: flex; justify-content: center;}
 
-$primary-color: #20b2aa;
-$secondary-color: #237bcd
+.pd-top-1 {padding-top: $increment;}
+.pd-top-2 {padding-top: $increment*2;}
+.pd-top-3 {padding-top: $increment*3;}
+.pd-top-4 {padding-top: $increment*4;}
+
+.pd-bottom-1 {padding-bottom: $increment;}
+.pd-bottom-2 {padding-bottom: $increment*2;}
+.pd-bottom-3 {padding-bottom: $increment*3;}
+.pd-bottom-4 {padding-bottom: $increment*4;}
+
+.pd-right-1 {padding-right: $increment;}
+.pd-right-2 {padding-right: $increment*2;}
+.pd-right-3 {padding-right: $increment*3;}
+.pd-right-4 {padding-right: $increment*4;}
+
+.pd-left-1 {padding-left: $increment;}
+.pd-left-2 {padding-left: $increment*2;}
+.pd-left-3 {padding-left: $increment*3;}
+.pd-left-4 {padding-left: $increment*4;}
+
+.clickable {cursor: pointer;}
