--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,8 @@
 //note: custom fonts are loaded in _app.tsx
 
+//import custom css for tabs
+@use '../node_modules/react-tabs/style/react-tabs.scss';
+
 //import and declare variables
 @use "colors.module.scss" as colors;
 $increment: 16px;
@@ -14,6 +17,7 @@ body {
 
 a {color: black; text-decoration: none; font-weight: 600;}
 a:hover {color: colors.$primary-dark; cursor: pointer;}
+input {border: 1px solid lightgrey; border-radius: 5px; padding: 6px 8px;}
 
 //classes
 .btn-primary {border-radius: 5px; color: black; background-color: colors.$primary; border: none; padding: 12px 16px; font-weight: 800;}
