added gif search

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,7 +30,7 @@ input {border: 1px solid lightgrey; border-radius: 5px; padding: 6px 8px;}
 .secondary-color {color: colors.$secondary}
 .secondary-text {color: grey;}
 
-.card {border-radius: 10px; box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); background-color: white; border-top: 8px solid colors.$primary}
+.card {border-radius: 10px; box-shadow: 0 3px 10px rgb(0 0 0 / 0.2); background-color: white;}
 
 //utilties
 .text-center {text-align: center;}
